# go-stack-trace

./: .gitignore  BUILD  WORKSPACE  deps.bzl  go.mod  go.sum
stacktrace/: BUILD.bazel  main.go
