load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "stacktrace_lib",
    srcs = ["main.go"],
    importpath = "github.com/bozaro/go-stack-trace/stacktrace",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_masterminds_cookoo//:cookoo",
        "@com_github_pkg_errors//:errors",
    ],
)

go_binary(
    name = "stacktrace",
    embed = [":stacktrace_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)
